# endura

./: .env.example  .gitignore  .npmrc  AGENTS.md  README.md  docker-compose.yml  learning_notes.md  package.json  pnpm-lock.yaml
.agents/skills/general-coding-tutor/: SKILL.md
.agents/skills/general-coding-tutor/agents/: openai.yaml
.agents/skills/implement-feature/: SKILL.md
.agents/skills/implement-feature/agents/: openai.yaml
.codex/agents/: api-implementer.toml  code-reviewer.toml  mobile-implementer.toml
apps/api/: alembic.ini  pyproject.toml
apps/api/app/: main.py
apps/api/app/api/: onboarding.py  strava.py  training_hq.py
apps/api/app/core/: auth.py  config.py
apps/api/app/db/: supabase.py
apps/api/app/integrations/strava/: strava_client.py
apps/api/app/schemas/: schemas.py
apps/api/app/services/: onboarding_service.py  profile_service.py  race_service.py  strava_oauth.py  training_hq_service.py  training_plan_service.py  workout_service.py  workout_summary_service.py
apps/api/tests/: test_training_hq_api.py  test_training_hq_service.py  test_workout_service.py
apps/mobile/: .env.example  app.json  babel.config.js  metro.config.js  package.json  tsconfig.json
apps/mobile/app/: _layout.tsx  create-account.tsx  index.tsx  login.tsx  onboarding.tsx  strava-connected.tsx  welcome.tsx
apps/mobile/app/(tabs)/: _layout.tsx  calendar.tsx  coach.tsx  (+2 more)
docs/: training-hq-flow.md
supabase/: config.toml
supabase/migrations/: migration.sql  migration2.sql  migration3.sql  migration4.sql  migration5.sql  migration6.sql  migration7.sql
(+42 files in other folders)
