[project]
name = "endura-api"
version = "0.1.0"
description = "FastAPI backend for Endura training data, Strava sync, RAG, and AI coaching."
requires-python = ">=3.10"
dependencies = [
  "alembic>=1.15.2,<2.0.0",
  "asyncpg>=0.30.0,<1.0.0",
  "fastapi[standard]>=0.115.12,<1.0.0",
  "greenlet>=3.1.1,<4.0.0",
  "httpx>=0.28.1,<1.0.0",
  "openai>=2.0.0,<3.0.0",
  "pgvector>=0.4.0,<1.0.0",
  "pydantic>=2.11.3,<3.0.0",
  "pydantic-settings>=2.8.1,<3.0.0",
  "python-dotenv>=1.1.0,<2.0.0",
  "sqlalchemy[asyncio]>=2.0.40,<3.0.0",
  "structlog>=25.2.0,<26.0.0",
  "supabase>=2.15.0,<3.0.0",
  "tenacity>=9.1.2,<10.0.0"
]

[project.optional-dependencies]
dev = [
  "mypy>=1.15.0,<2.0.0",
  "pytest>=8.3.5,<9.0.0",
  "pytest-asyncio>=0.26.0,<1.0.0",
  "ruff>=0.11.5,<1.0.0"
]

[build-system]
requires = ["setuptools>=80.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
namespaces = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
plugins = ["pydantic.mypy"]
